# photostore

./: .gitignore  LICENSE  README.md  cleanup.sh  local.config.template  pyproject.toml  run.sh
photostore/: app.py  auth.py  store.py
templates/: list.html
