[tool.poetry]
name = "photostore"
version = "0.1.0"
description = "JPG upload/download service"
authors = ["Alper Gundogdu <mail@alpergundogdu.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.0"
uvicorn = "^0.11.8"
python-multipart = "^0.0.5"
python-dotenv = "^0.14.0"
aiofiles = "^0.5.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.3"
isort = "<5.0.0"
pylint_runner = "^0.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
